# aptitude

./: .gitignore  Makefile.am  NEWS  aptitude-defaults.cs  aptitude-defaults.ru  aptitude-defaults.sv  autogen.sh  configure.ac  help-cs.txt  help-ru.txt  help-sv.txt  help.txt  section-descriptions
buildlib/: doc.mk  docbook.mk
doc/: .gitignore  Makefile.am  aptitude-html.xsl  aptitude-txt.xsl  common.mk  po4a.mk
doc/cs/: Makefile.am  aptitude.xml
doc/de/: Makefile.am
doc/en/: Makefile.am  aptitude.xml  manpage.xml
doc/es/: Makefile.am
doc/fi/: Makefile.am  aptitude.xml  fixman  manpage.xml
doc/fr/: Makefile.am  fixman
doc/it/: Makefile.am
doc/it/images/: Makefile.am
doc/ja/: Makefile.am
doc/nl/: Makefile.am
doc/pl/: Makefile.am  fixman
doc/po4a/: Makefile.am  po4a.cfg
doc/po4a/add_nl/: Makefile.am  addendum.1.nl
doc/po4a/add_ru/: Makefile.am  addendum.1.ru
doc/po4a/po/: Makefile.am  aptitude.pot  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  ru.po
doc/ru/: Makefile.am
doc/ru/images/: Makefile.am
doc/xx/: Makefile.am
po/: Makevars  Makevars.template  aptitude.pot  ar.po  ast.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  ja.po  km.po  ku.po  lt.po  mr.po  nb.po  ne.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  th.po  tl.po  tr.po  uk.po  (+3 more)
src/: Makefile.am  apt_config_treeitems.cc  apt_config_treeitems.h  apt_config_widgets.cc  apt_config_widgets.h  apt_info_tree.cc  apt_info_tree.h  apt_options.cc  apt_options.h  apt_undo_tree.cc  apt_undo_tree.h  broken_indicator.cc  broken_indicator.h  defaults.cc  defaults.h  dep_item.cc  dep_item.h  desc_render.cc  desc_render.h  download_item.cc  download_item.h  download_list.cc  download_list.h  download_thread.cc  download_thread.h  load_grouppolicy.cc  load_pkgview.cc  load_sortpolicy.cc  loggers.cc  loggers.h  main.cc  menu_redirect.cc  menu_redirect.h  menu_text_layout.cc  menu_text_layout.h  menu_tree.cc  menu_tree.h  pkg_columnizer.cc  pkg_columnizer.h  pkg_grouppolicy.cc  (+37 more)
src/cmdline/: Makefile.am  cmdline_action.cc  cmdline_action.h  cmdline_apt_proxy.cc  cmdline_apt_proxy.h  cmdline_changelog.cc  cmdline_changelog.h  cmdline_check_resolver.cc  cmdline_check_resolver.h  cmdline_clean.cc  cmdline_clean.h  cmdline_common.h  cmdline_do_action.cc  cmdline_do_action.h  cmdline_download.cc  cmdline_download.h  cmdline_download_progress_display.cc  cmdline_download_progress_display.h  cmdline_dump_resolver.cc  cmdline_dump_resolver.h  cmdline_extract_cache_subset.cc  cmdline_extract_cache_subset.h  cmdline_forget_new.cc  cmdline_forget_new.h  cmdline_main_loop.cc  cmdline_main_loop.h  cmdline_mark.cc  cmdline_mark.h  cmdline_progress.cc  cmdline_progress.h  cmdline_progress_display.cc  cmdline_progress_display.h  cmdline_prompt.cc  cmdline_prompt.h  cmdline_resolver.cc  cmdline_resolver.h  cmdline_search.cc  cmdline_search.h  cmdline_search_progress.cc  cmdline_search_progress.h  (+24 more)
src/generic/apt/: Makefile.am  apt.cc  apt.h  aptcache.cc  aptcache.h  aptitude_resolver.cc  aptitude_resolver.h  aptitude_resolver_cost_settings.cc  aptitude_resolver_cost_settings.h  aptitude_resolver_cost_syntax.cc  aptitude_resolver_cost_syntax.h  aptitude_resolver_cost_types.cc  aptitude_resolver_cost_types.h  aptitude_resolver_universe.cc  aptitude_resolver_universe.h  changelog_parse.cc  changelog_parse.h  config_file.cc  config_file.h  desc_parse.cc  desc_parse.h  download_install_manager.cc  download_install_manager.h  download_manager.cc  download_manager.h  download_queue.cc  download_queue.h  download_signal_log.cc  download_signal_log.h  download_update_manager.cc  download_update_manager.h  dpkg.cc  dpkg.h  dpkg_selections.cc  dpkg_selections.h  dump_packages.cc  dump_packages.h  globals.cc  infer_reason.cc  infer_reason.h  (+18 more)
src/generic/apt/history/: Makefile.am  history_entry.cc  history_entry.h
src/generic/apt/matching/: Makefile.am  compare_patterns.cc  compare_patterns.h  match.cc  match.h  parse.cc  parse.h  pattern.cc  pattern.h  serialize.cc  serialize.h
src/gtk/: Makefile.am  aptitude.glade  areas.cc  areas.h  changelog.cc  changelog.h  constants.h  dashboardtab.cc  dashboardtab.h  dependency_chains_tab.cc  dependency_chains_tab.h  download.cc  download.h  dpkg_terminal.cc  dpkg_terminal.h  entitysummary.cc  entitysummary.h  entityview.cc  entityview.h  errortab.cc  errortab.h  filesview.cc  filesview.h  globals.cc  globals.h  gui.cc  gui.h  hyperlink.cc  hyperlink.h  info.cc  info.h  init.cc  init.h  mainwindow.cc  mainwindow.h  notify.cc  notify.h  packageinformation.cc  packageinformation.h  packagestab.cc  (+18 more)
src/mine/: Makefile.am  cmine.cc  mine-help-cs.txt  mine-help-de.txt  mine-help-es.txt  mine-help-fi.txt  (+8 more)
tests/: Makefile.am  cppunit_test_main.cc  gtest_test_main.cc  test_apt_universe.cc  test_choice.cc  test_choice_set.cc  test_cmdline_download_progress_display.cc  test_cmdline_download_status_display.cc  test_cmdline_progress_display.cc  test_cmdline_search_progress.cc  test_config_pusher.cc  test_dense_setset.cc  test_dynamic_list.cc  test_dynamic_set.cc  test_enumerator.cc  test_file_cache.cc  test_incremental_expression.cc  test_logging.cc  test_matching.cc  test_misc.cc  test_parsers.cc  test_promotion_set.cc  test_resolver.cc  test_resolver_costs.cc  test_resolver_hints.cc  test_search_input_controller.cc  test_setset.cc  test_sqlite.cc  test_teletype_mock.cc  test_temp.cc  test_terminal_mock.cc  test_transient_message.cc  test_wtree.cc
(+129 files in other folders)
